Added some integration tests.  Altered the title of views to include tradtunedb

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,7 +8,7 @@
 <!--[if IE 8 ]>    <html lang="en-us" class="ie8"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en-us"> <!--<![endif]-->
 <head>
-        <title>@title : trad tunes</title>
+        <title>@title : tradtunedb</title>
 	<meta charset="utf-8" />
         <meta name="keywords" content="traditional music session tunes" />
         <meta name="description" content="Traditional Music" />
