--- a/app/views/usersresults.scala.html
+++ b/app/views/usersresults.scala.html
@@ -11,7 +11,7 @@
 }
 
 
-@main("search results")("")(userName)(navigation("home")(userName)) {         
+@main("users")("")(userName)(navigation("home")(userName)) {         
     <div id="searchresultsdiv" role="main" class="main" >
           <p>User List @pageInfo</p>
           @results 
