Added rotating colour wheel when midi player loads
small alteration to credits page.
Tune page now attempts to ignore the player if the user agent is IE
Fixed redirect after add new tune title

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,7 +7,7 @@
 }
 
 @main("home")("")(None: Option[String])(navigation) {
-   <p>Welcome to Play 2.0.3</p>
+   <p>Welcome to Play 2.2.0: @message</p>
 }
 
 
