--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -7,7 +7,8 @@
        <h2>TradTuneDB version @version</h2>
        <p>TradTuneDb is a database of Irish, Scottish, Scandinavian and klezmer tunes. You can search for tunes and then view the scores
        or hear them played.  Of course, having them played on a rather tinny midi piano is no substitute for hearing the real thing, but it
-       may help you to learn the basics of a tune because you can vary the tempo. Currently, the best quality sound output is to be found with Chrome.</p>
+       may help you to learn the basics of a tune because you can vary the tempo. Currently, the player works with the latest releases
+       of all the major browsers other than Internet Explorer. The best quality sound output is to be found with Chrome.</p>
        
        <p>Once you have registered with TradTuneDB, you can then submit a new tune to the database. As soon as you have done this, it will be
        given a unique URL (which is all you have to use if you want to share it with a friend) and you will also be able to listen to your tune.  
