--- a/app/views/tune.scala.html
+++ b/app/views/tune.scala.html
@@ -63,7 +63,7 @@
      </nav>
     </div>
   </div>
-
+@if(!isInternetExplorer) {      
 <script type="text/javascript">
 
 var audio = $("#audioPlayer");
@@ -168,6 +168,7 @@ function getTimeWarp() {
 
 
 </script>
+}
 
 
 }
