Added URLS that maintain comments against a tune
We now support the routes:

GET     /genre/:genre/tune/:tune/comments
POST    /genre/:genre/tune/:tune/comments
POST    /genre/:genre/tune/:tune/comments/try
GET     /genre/:genre/tune/:tune/comment/:id
POST    /genre/:genre/tune/:tune/comment/:id

also added a help URL:

GET     /help

also, take advantage of the new user registration in MusicRest with:

GET     /newuser/register/:uuid

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -79,6 +79,9 @@
                @if(!(title == "contact us")) {
                  <a href="/contact" >contact us</a>
                }
+               @if(!(title == "help")) {
+                 <a href="/help" >help</a>
+               }
            </nav>
          </div>
 
