--- a/app/views/tune.scala.html
+++ b/app/views/tune.scala.html
@@ -47,6 +47,7 @@
       }
 
        <ul>
+         <li><a href="@name/comments" >comments</a></li>
          <li><a href="@name/abc" >abc</a></li>
          <li><a href="@tuneUrl/abc" type="text/vnd.abc" download="@abcName" >download abc</a></li>
          <li><a href="@tuneUrl/pdf" type="application/pdf" download="@pdfName" >download pdf</a></li>
