Added more unit tests around comments
Also made some small changes to static pages.

--- a/app/views/uploadtune.scala.html
+++ b/app/views/uploadtune.scala.html
@@ -11,7 +11,7 @@
        <legend >upload tune</legend>
           <ul>
             <li>
-             <p>Upload an ABC file to the @genre genre</p>
+             <p>Upload an ABC file to the @genre genre (with extension <em>.abc</em>)</p>
             </li>
             <li>
              <p>The file should contain a single tune</p>
