--- a/app/views/help.scala.html
+++ b/app/views/help.scala.html
@@ -42,7 +42,7 @@
        </p>
        <p>If you can't find a ready-made ABC file, you will have to build one yourself from scratch.  This usually means you first have to transcribe the
        tune and then conversion to ABC notes is a largely mechanical process.  There are good <a href='http://abcnotation.com/learn'>ABC tutorials</a> 
-       to help you to do this.
+       to help you to do this. It should have the file extension <em>.abc</em>.
        </p>
        <p>Now you've got your ABC file, you can try to upload it to TradTuneDB.  Firstly, make sure you are logged in and that you are using your intended genre. 
        Then, you can either use the <em>new tune</em> form and paste the ABC into the form field, or you can use the <em>upload</em> option where you enter the location 
