--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -208,8 +208,8 @@ input[type="email"],
 input[type="password"],
 input[type="text"] {
 	padding: 2px 3px;
-        color: black; 
-        background: #f3f6c6;
+    color: black; 
+    background: #f3f6c6;
 	width: 200px; 
 }
 
@@ -256,6 +256,11 @@ input[type="text"]#searchcriteria {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+}
+
+/* a comment subject */
+input[type="text"]#subject {	
+	width: 250px; 
 }
 
 .input_tip {
