Added a known issues section to the help page
There is a regression in Chrome Version 30 that stops the formaction attribute working when there are multiple submit buttons.  https://code.google.com/p/chromium/issues/detail?id=303707. Other browsers are OK.  Warned about this and about the fact that IE can't play the tunes at all.

--- a/app/views/comments.scala.html
+++ b/app/views/comments.scala.html
@@ -22,7 +22,7 @@
    </div>
 }
 
-@main("Welcome to Play")("")(userName)(navigation("home")(userName)) {
+@main("Comments")("")(userName)(navigation("home")(userName)) {
     <div id="commentdiv" role="main" class="main" > 
     
     <p>number of comments: @{comments.size}</p>
@@ -51,7 +51,7 @@
             }
            </ul> 
            <div class = "submitgroup" >
-             <input type="submit" value="post" formaction="@{routes.Application.processOriginalComment(genre, tuneid)}"/> 
+             <input type="submit" value="post" /> 
              <input type="submit" value="try it out" formaction="@{routes.Application.processTryComment(genre, tuneid)}" /> 
            </div>
          </fieldset>
