--- a/app/views/help.scala.html
+++ b/app/views/help.scala.html
@@ -4,6 +4,13 @@
 
 @main("help")("")(userName)(navigation("home")(userName)) {         
     <div id="helpdiv" role="main" class="main" >
+       <h2>Are there any known issues or restrictions?</h2>
+       <p>Tunes cannot be played in Internet Explorer. Because this is probably the main reason for using the system in the first
+       place, you are strongly recommended to use a different browser.
+       </p>
+       <p>The <em>try it out</em> button for both new tunes and comments doesn't work in Chrome Version 30.  Instead, the tune or the comment is added to
+       the database.  Other browsers and previous versions of Chrome are OK.  It is hoped that this will be fixed in the next version of Chrome.
+       </p>
        <h2>Why should I register?</h2>
        <p>You don't have to register to search for tunes, to see their scores and comments or to play them.  But you do need to register if you wish to submit a 
        new tune or add a comment.  When you register, you will need to supply a user name and an email address.  We will keep your email address secret and will
