--- a/app/views/help.scala.html
+++ b/app/views/help.scala.html
@@ -20,7 +20,7 @@
        <h2>Which genres are supported?</h2>
        <p>At the moment, TradTuneDB recognises Irish, Scottish, Scandinavian and klezmer tunes.  These are kept in separate collections and when you choose 
        a particular genre in a tune search, this is used as the default until you decide to change it.  Each tune has a distinct name (consisting of the
-       tune name and its genre) which is used in its URL.  Also, each tune must have a key signature and a rhythm (the tune type).
+       tune name and its type) which is used in its URL.  Also, each tune must have a key signature and a rhythm (the tune type).
        The rhythms available are appropriate for the genre (so, for example, Irish tunes use jigs, reels etc. whilst Scandi tunes use polska, gånglåt etc.).  You
        can optionally use the keys or the rhythms when searching for tunes. The search dropdowns show the rhythms and keys that are supported for each genre.
        If you want to, you can also use an advanced search where (for example) you can look
@@ -54,9 +54,10 @@
        <p>Now you've got your ABC file, you can try to upload it to TradTuneDB.  Firstly, make sure you are logged in and that you are using your intended genre. 
        Then, you can either use the <em>new tune</em> form and paste the ABC into the form field, or you can use the <em>upload</em> option where you enter the location 
        of the ABC file on your file system. If the ABC checks out OK, the system immediately shows you the tune's page, allowing you to see the score and hear it.
-       You may find that the tune doesn't look or sound quite right and you'd like to tweak the notes a little. To do this, navigate to the ABC page for the
-       tune and delete the tune.  You can then edit your ABC and re-submit it.  You can do this as many times as you like until you are happy with your
-       transcription.  Alternatively, the new tune page has a button labelled 'try it out' which allows you to look at the score but doesn't save the tune
+       You may find that the tune doesn't look or sound quite right and you'd like to tweak the notes a little. To do this, simply edit the ABC and resubmit it.
+       You can do this as many times as you like until you are happy with your transcription.  You may also delete the tune if you're unhappy with it by navigating 
+       to the ABC page for the tune and selecting <em>delete</em>.        
+       Alternatively, the new tune page has a button labelled 'try it out' which allows you to look at the score but doesn't save the tune
        to the database.  Again you can keep trying with edited versions of the tune until you are happy with the score and can submit it.
        </p>
        <h2>How do I submit a comment?</h2>
