Replace play-json with Argonaut

--- a/app/views/credits.scala.html
+++ b/app/views/credits.scala.html
@@ -39,6 +39,10 @@
                 <td>validation:</td>
                 <td><a href="https://github.com/scalaz/scalaz">scalaz</a></td>
              </tr>
+             <tr>
+                <td>JSON:</td>
+                <td><a href="http://argonaut.io/">argonaut</a></td>
+             </tr>
           </table>
 
     </div>
