Added better validation on user registration form

--- a/app/views/newuser.scala.html
+++ b/app/views/newuser.scala.html
@@ -16,7 +16,7 @@
               @helper.inputText(registrationForm("name"), 'required -> "required",  '_class -> "newuser", '_help -> "" )
              </li>
              <li>
-              @helper.inputText(registrationForm("email"), 'required -> "required", '_class -> "newuser")
+              @helper.inputText(registrationForm("email"), 'required -> "required", '_class -> "newuser", '_help -> "" )
              </li>
              <li>
                @helper.inputPassword(registrationForm("password.main"), '_label -> "Password",'required -> "required", '_class -> "newuser", '_help -> "")
