--- a/app/views/help.scala.html
+++ b/app/views/help.scala.html
@@ -15,7 +15,7 @@
        <p>You don't have to register to search for tunes, to see their scores and comments or to play them.  But you do need to register if you wish to submit a 
        new tune or add a comment.  When you register, you will need to supply a user name and an email address.  We will keep your email address secret and will
        not spam you.  Once you send your details, you will be sent an email with a link which you must click on to finish the registration
-       process.  Then you will be able to log in.
+       process.  Then you will be able to log in. You register via a link from the login page.
        </p>
        <h2>Which genres are supported?</h2>
        <p>At the moment, TradTuneDB recognises Irish, Scottish, Scandinavian and klezmer tunes.  These are kept in separate collections and when you choose 
