Query backend for ABC metadata; use on tune page
In particular, display the tempo slider settings based on the requested tempo from the ABC (Q header) if it exists and display other tune metadata such as origin, source, composer etc (if they exist).  Add full tests for deriving the tempo from whatever clues exist in the ABC.  Bump version to 1.0.5.

--- a/app/views/help.scala.html
+++ b/app/views/help.scala.html
@@ -47,8 +47,18 @@
        in representing the tune's score (such as chords, harmonies, ornamentation and so on).  However, it is usually 
        best if you don't use these features if you want to hear the tune played clearly - just use tunes with a single melody line.
        </p>
+       <p>By default, the player will play the tune as closely as possible to a tempo of 1/4=120 (i.e. 120 crochets to the minute). If you'd prefer to
+       change this, then you can supply a <b>Q</b> header in the ABC:
+       
+         <table class="textalign">
+           <tr><td>Q</td><td>Tempo</td><td>e.g. Q:1/4=120</td></tr>
+         </table>
+         <br />
+         
+       and of course you can also change the speed by moving the slider. 
+       </p>
        <p>If you can't find a ready-made ABC file, you will have to build one yourself from scratch.  This usually means you first have to transcribe the
-       tune and then conversion to ABC notes is a largely mechanical process.  There are good <a href='http://abcnotation.com/learn'>ABC tutorials</a> 
+       tune and then you can convert to ABC notes by a process that is largely mechanical.  There are good <a href='http://abcnotation.com/learn'>ABC tutorials</a> 
        to help you to do this. It should have the file extension <em>.txt</em> although some browsers will also accept the <em>.abc</em> extension.
        </p>
        <p>Now you've got your ABC file, you can try to upload it to TradTuneDB.  Firstly, make sure you are logged in and that you are using your intended genre. 
