Added interface to miditoabc translation
also:
1) Migrated to Play 2.3.8 and argonaut 6.1
2) Removed dependency on scalaz
3) Upgraded to dispatch 0.11.2 (in spite of its continued lack of documentation)
   This version uses Futures in the proxied backend calls.
4) Minor UI bugfixes

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-@main("about")("")(userName)(navigation("home")(userName)) {         
+@main("about")(None)(userName)(navigation("home")(userName)) {         
     <div id="creditsdiv" role="main" class="main" >
        <h2>TradTuneDB version @version</h2>
        <p>TradTuneDb is a database of Irish, Scottish, Scandinavian and klezmer tunes. You can search for tunes and then view the scores
