--- a/app/views/comments.scala.html
+++ b/app/views/comments.scala.html
@@ -3,7 +3,7 @@
 @import snippets._
 @import utils.Pimps._
 @import utils.Utils
-@import play.api.templates._
+@import play.twirl.api._
 
 @render(comment: models.Comment) = {
    <div>
@@ -22,7 +22,7 @@
    </div>
 }
 
-@main("Comments")("")(userName)(navigation("home")(userName)) {
+@main("Comments")(None)(userName)(navigation("home")(userName)) {
     <div id="commentdiv" role="main" class="main" > 
     
     <p>number of comments: @{comments.size}</p>
