--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-@main("contact us")("")(userName)(navigation("home")(userName)) {         
+@main("contact us")(None)(userName)(navigation("home")(userName)) {         
     <div id="contactdiv" role="main" class="main" >
           <p>TradTuneDb has been developed by Bayswater Software.</p>
           <p>You may like to add further music genres, or perhaps you have other suggestions for improvement or new features.
