--- a/app/views/credits.scala.html
+++ b/app/views/credits.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-@main("credits")("")(userName)(navigation("home")(userName)) {         
+@main("credits")(None)(userName)(navigation("home")(userName)) {         
     <div id="creditsdiv" role="main" class="main" >
           <p>TradTuneDb uses <a href="http://abcnotation.com/">ABC notation</a> and so obviously owes a tremendous debt to Chris Walshaw who developed it. 
  It uses the <a href="https://github.com/newlandsvalley/musicrest">MusicRest</a> web service for storing and transcoding its tunes. This in turn transcodes by means of:</p>
@@ -34,10 +34,6 @@
              <tr>
                 <td>interface to the <a href="http://www.mongodb.org/" >mongoDB</a> database:</td>
                 <td><a href="http://api.mongodb.org/scala/casbah/2.0/">casbah</a></td>
-             </tr>
-             <tr>
-                <td>validation:</td>
-                <td><a href="https://github.com/scalaz/scalaz">scalaz</a></td>
              </tr>
              <tr>
                 <td>JSON:</td>
