--- a/app/views/donate.scala.html
+++ b/app/views/donate.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-@main("donate")("")(userName)(navigation("home")(userName)) {         
+@main("donate")(None)(userName)(navigation("home")(userName)) {         
     <div id="creditsdiv" role="main" class="main" >
           <p>The Trad Tune Store is a non-profit-making venture, but hosting it can be expensive . Your donations help to keep the site up and running.</p>
     
