--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,7 @@
    <li><a href="newtune.html" >new tune</a></li>
 }
 
-@main("home")("")(None: Option[String])(navigation) {
+@main("home")(None)(None: Option[String])(navigation) {
    <p>Welcome to Play 2.2.0: @message</p>
 }
 
