--- a/app/views/newuser.scala.html
+++ b/app/views/newuser.scala.html
@@ -4,7 +4,7 @@
 @import utils.Pimps._
 @import utils.Utils
 
-@main("new user")("")(userName)(navigation("login")(userName)) {         
+@main("new user")(None)(userName)(navigation("login")(userName)) {         
    <div id="searchdiv" role="main" class="main" > 
     
         <!--form name="Create_user" id="newuserform" action=@(Utils.remoteService) + "user" method="POST" enctype="application/x-www-form-urlencoded" -->
