--- a/app/views/passwordreminder.scala.html
+++ b/app/views/passwordreminder.scala.html
@@ -4,7 +4,7 @@
 @import utils.Pimps._
 @import utils.Utils
 
-@main("password reminder")("")(userName)(navigation("login")(userName)) {   
+@main("password reminder")(None)(userName)(navigation("login")(userName)) {   
     <div id="logindiv" role="main" class="main" > 
         <span class="error" >@(message.map(m => m))</span>     
         <!--form name="Login" id="loginform" action=@(Utils.remoteService) + "user/password" method="POST" enctype="application/x-www-form-urlencoded" -->
