--- a/app/views/tune.scala.html
+++ b/app/views/tune.scala.html
@@ -13,7 +13,7 @@
 @pdfName = @{plainName + ".pdf"}
 @abcMetadata = @{abcMetaOpt.get}
 
-@main(plainName)("")(userName)(navigation("home")(userName)) {         
+@main(plainName)(None)(userName)(navigation("home")(userName)) {         
    <div  id="tunediv"  role="main" class="main" >
       <!--img src="@tuneUrl/png" alt="@name from genre @genre" width="494" height="345" /-->  
   
