--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(onload: String)(userName: Option[String])(navigation: Html)(content: Html)
+@(title: String)(onload: Option[scala.xml.Unparsed])(userName: Option[String])(navigation: Html)(content: Html)
 
 
 <!DOCTYPE html>
@@ -16,13 +16,13 @@
         <meta name="copyright" content="public domain" />
         <meta name="robots" content="noindex,follow" />
         <link href='http://fonts.googleapis.com/css?family=Fondamento' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/base.css")">   
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/base.css")?version=110">   
           <!-- MIDI.js player css -->
           <link rel="stylesheet" media="screen" href="@routes.Assets.at("MIDI.js/css/MIDIPlayer.css")" >
           <!-- end of MIDI.js player css -->
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")" >
         <script src="@routes.Assets.at("javascripts/jquery-2.0.3.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/tradtunestore.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/tradtunestore.js")?version=110" type="text/javascript"></script>
  @if(true) {  
           <!-- midi.js package -->
           <script src="@routes.Assets.at("MIDI.js/js/MIDI/AudioDetect.js")" type="text/javascript"></script>
@@ -40,9 +40,15 @@
           <!-- MIDI.js extras -->
           <script src="@routes.Assets.at("MIDI.js/inc/Base64.js")" type="text/javascript"></script>
           <script src="@routes.Assets.at("MIDI.js/inc/base64binary.js")" type="text/javascript"></script>
+
+          <script> 
+           window.onload = function() {
+             @onload.getOrElse("");
+           }
+          </script>
         }
 </head>
-<body @onload >
+<body >
   <div id="container">
     <div id="page">
        <!-- ==== START MASTHEAD ==== -->
