--- a/app/views/advancedsearch.scala.html
+++ b/app/views/advancedsearch.scala.html
@@ -1,4 +1,4 @@
-@(advancedSearchForm: Form[AdvancedSearch])(implicit lang: Lang, genre: String, userName: Option[String])
+@(advancedSearchForm: Form[AdvancedSearch])(implicit lang: Lang, genre: String, userName: Option[String], messages: Messages)
 
 @import snippets._
 @import utils.Pimps._
