--- a/app/views/commentEdit.scala.html
+++ b/app/views/commentEdit.scala.html
@@ -1,4 +1,4 @@
-@(originalComment: Comment, commentForm: Form[Comment], genre: String, tuneid: String)(userName: Option[String])
+@(originalComment: Comment, commentForm: Form[Comment], genre: String, tuneid: String)(userName: Option[String])(implicit messages: Messages)
 
 @import snippets._
 @import utils.Pimps._
