--- a/app/views/convert.scala.html
+++ b/app/views/convert.scala.html
@@ -1,4 +1,4 @@
-@(midiMetadataForm: Form[MidiMetadata], filename: String, abc: Option[String], tuneImageRef: Option[String], tuneImageError: Option[String])(implicit lang: Lang, genre: String, userName: Option[String])
+@(midiMetadataForm: Form[MidiMetadata], filename: String, abc: Option[String], tuneImageRef: Option[String], tuneImageError: Option[String])(implicit lang: Lang, genre: String, userName: Option[String], messages: Messages)
 
 @import snippets._ 
 @import helper._
