--- a/app/views/newtune.scala.html
+++ b/app/views/newtune.scala.html
@@ -1,4 +1,4 @@
-@(tuneForm: Form[Tune])(implicit lang: Lang, genre: String, userName: Option[String])
+@(tuneForm: Form[Tune])(implicit lang: Lang, genre: String, userName: Option[String], messages: Messages)
 
 @import snippets._
 @import utils.Pimps._
