--- a/app/views/passwordreminder.scala.html
+++ b/app/views/passwordreminder.scala.html
@@ -1,4 +1,4 @@
-@(passwordReminderForm: Form[PasswordReminder], message: Option[String])(implicit lang: Lang, userName: Option[String])
+@(passwordReminderForm: Form[PasswordReminder], message: Option[String])(implicit lang: Lang, userName: Option[String], messages: Messages)
 
 @import snippets._
 @import utils.Pimps._
@@ -6,8 +6,7 @@
 
 @main("password reminder")(None)(userName)(navigation("login")(userName)) {   
     <div id="logindiv" role="main" class="main" > 
-        <span class="error" >@(message.map(m => m))</span>     
-        <!--form name="Login" id="loginform" action=@(Utils.remoteService) + "user/password" method="POST" enctype="application/x-www-form-urlencoded" -->
+        <span class="error" >@(message.map(m => m))</span>  
         @helper.form(action = routes.Application.processPasswordReminder, 'id -> "passwordReminderForm", 'enctype -> "application/x-www-form-urlencoded") {
          <fieldset>
            <legend class="login" >Password Reminder</legend>
