--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -1,4 +1,4 @@
-@(searchForm: Form[Search])(implicit lang: Lang, genre: String, userName: Option[String])
+@(searchForm: Form[Search])(implicit lang: Lang, genre: String, userName: Option[String], messages: Messages)
 
 @import snippets._
 @import utils.Pimps._
