--- a/app/views/snippets/pageLinks.scala.html
+++ b/app/views/snippets/pageLinks.scala.html
@@ -1,6 +1,6 @@
 @(genre: String, predicateOption: Option[String], sort: String, currentPage: Int, totalPages: Int)
 
-@import play.api.templates.Html
+@import play.twirl.api._
 @import snippets._
 @import utils._
 
