--- a/app/views/help.scala.html
+++ b/app/views/help.scala.html
@@ -59,8 +59,7 @@
        </p>
        <p>If you can't find a ready-made ABC file but you do have a midi recording of the tune, you can try to <a href='helpmidi2abc'>convert the midi</a> 
        directly into ABC. Otherwise, you will have to build the ABC yourself from scratch.  This usually means you first have to transcribe the tune and 
-       then it is a largely mechanical process to convert the score.  There are good <a href='http://abcnotation.com/learn'>ABC tutorials</a> to help you 
-       to do this. Your final file should have the extension <em>.txt</em> although some browsers will also accept the <em>.abc</em> extension.
+       then it is a largely mechanical process to convert the score.   Your final file should have the extension <em>.txt</em> although some browsers will also accept the <em>.abc</em> extension.
        </p>
        <p>Now you've got your ABC file, you can try to upload it to TradTuneDB.  Firstly, make sure you are logged in and that you are using your intended genre. 
        Then, you can either use the <em>new tune</em> form and paste the ABC into the form field, or you can use the <em>upload</em> option where you enter the location 
@@ -70,6 +69,11 @@
        to the ABC page for the tune and selecting <em>delete</em>.        
        Alternatively, the new tune page has a button labelled 'try it out' which allows you to look at the score but doesn't save the tune
        to the database.  Again you can keep trying with edited versions of the tune until you are happy with the score and can submit it.
+       </p>
+       <h2>How do I learn ABC?</h2>
+       <p>You could start by taking a look at the <a href='abctutorial'>interactive ABC tutorial</a>.  This has a set of lessons, starting very simply 
+       with just the  notes A,B and C and ending with complete tunes.  At each stage you can experiment with the ABC and listen to the results.  
+       There are also more detailed <a href='http://abcnotation.com/learn'>tutorials</a> which are not interactive.
        </p>
        <h2>How do I submit a comment?</h2>
        <p>Comments are intended to hold additional information about each tune.  They are particularly useful if you find a YouTube video of the tune 
