--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@(loginForm: Form[Login], message: Option[String])(implicit lang: Lang, userName: Option[String])
+@(loginForm: Form[Login], message: Option[String])(implicit lang: Lang, userName: Option[String], messages: Messages)
 
 @import snippets._
 @import utils.Pimps._
@@ -7,8 +7,7 @@
 @main("login")(None)(userName)(navigation("login")(userName)) {   
     <div id="logindiv" role="main" class="main" > 
         <span class="error" >@(message.map(m => m))</span>  
-        <!--form name="Login" id="loginform" action=@(Utils.remoteService) + "user" method="POST" enctype="application/x-www-form-urlencoded" -->
-        @helper.form(action = routes.Application.processLogin, 'id -> "loginform", 'enctype -> "application/x-www-form-urlencoded") {
+         @helper.form(action = routes.Application.processLogin, 'id -> "loginform", 'enctype -> "application/x-www-form-urlencoded") {
          <fieldset>
            <legend class="login" >Login</legend>
             <ul>
