--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -23,6 +23,10 @@
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")" >
         <script src="@routes.Assets.at("javascripts/jquery-2.0.3.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/tradtunestore.js")?version=110" type="text/javascript"></script>
+
+ @if(title.equals ("abctutorial")) { 
+        <script src="@routes.Assets.at("javascripts/abc-player.js")" type="text/javascript"></script>
+        }
  @if(true) {  
           <!-- midi.js package -->
           <script src="@routes.Assets.at("MIDI.js/js/MIDI/AudioDetect.js")" type="text/javascript"></script>
@@ -79,6 +83,9 @@
                @if(!(title == "about")) {
                  <a href="/about" >about</a>
                }           
+               @if(!(title == "abctutorial")) {
+                 <a href="/abctutorial" >abc tutorial</a>
+               }           
                @if(!(title == "credits")) {
                  <a href="/credits" >credits</a>
                }
@@ -97,5 +104,12 @@
      <!-- #page -->	
    </div>
 <!-- #container -->	
-</body>
+</body> 
+<!-- elm code for the ABC tutorial -->	
+@if(title.equals ("abctutorial")) { 
+    <script type="text/javascript">
+       var abcDiv = document.getElementById('abc');
+       Elm.embed(Elm.Main, abcDiv);
+}
+    </script>
 </html>
